--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.3",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.8.0"
+    "nodemailer": "^6.8.0",
+    "socket.io": "^2.5.0",
+    "weapp.socket.io": "^2.1.0"
   }
 }
